# ezinstalllib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
examples/: demo.ezi  run_demo.c
examples/assets/: welcome.txt
include/: ezinstall.h  ezinstalllib.h
src/: executor.c  internal.h  ops.c  parser.c  path.c  platform.c  util.c
tools/: ezi.c
